--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: php
 
 php:
   - 5.6
+  - 7.0
 
 install:
   - composer self-update
-  - composer global require "fxp/composer-asset-plugin:~1.1.1"
+  - composer global require "fxp/composer-asset-plugin:^1.2.0"
   - composer install
 
 before_script:
