--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,12 @@
     "psr-4": {
       "corpsepk\\DaData\\": "src"
     }
+  },
+
+  "extra": {
+    "asset-installer-paths": {
+      "npm-asset-library": "vendor/npm",
+      "bower-asset-library": "vendor/bower"
+    }
   }
 }
