--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
     "php": ">=5.6"
   },
 
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "scrutinizer/ocular": "~1.1"
+  },
+  
   "autoload": {
     "psr-4": {
       "corpsepk\\DaData\\": "src"
