composer replaced `extra:asset-installer-paths` with `config:fxp-asset`

--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,13 @@
     }
   },
 
-  "extra": {
-    "asset-installer-paths": {
-      "npm-asset-library": "vendor/npm",
-      "bower-asset-library": "vendor/bower"
+  "config": {
+    "process-timeout": 1800,
+    "fxp-asset": {
+      "installer-paths": {
+        "npm-asset-library": "vendor/npm-asset",
+        "bower-asset-library": "vendor/bower-asset"
+      }
     }
   }
 }
